# desktopmcp

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: appimage.yml
src/: main.rs  pipewire_capture.rs  server.rs  session.rs
src/atspi/: accessible.rs  action.rs  collection.rs  component.rs  document.rs  events.rs  hyperlink.rs  hypertext.rs  image.rs  mod.rs  selection.rs  table.rs  table_cell.rs  text.rs  types.rs  value.rs
src/dbus/: call.rs  introspect.rs  mod.rs  properties.rs  signals.rs  types.rs
src/portal/: account.rs  background.rs  camera.rs  clipboard.rs  dynamic_launcher.rs  email.rs  file_chooser.rs  game_mode.rs  global_shortcuts.rs  location.rs  memory_monitor.rs  mod.rs  network.rs  notification.rs  open_uri.rs  power_profile.rs  print.rs  proxy_resolver.rs  remote_desktop.rs  screenshot.rs  secret.rs  settings.rs  system.rs  wallpaper.rs
src/tools/: atspi_tools.rs  dbus_tools.rs  input.rs  mod.rs  portal_tools.rs  screenshot.rs  session.rs  ui_tools.rs
